--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body{
 	background-image:url('images/fond.png');
 	background-size: contain; 
 	overflow-x: hidden;
+	margin-left: 20%;
+	margin-right: 20%;
 }
 
 body > header > nav > ul{
@@ -53,5 +55,27 @@ body > header > h1 {
 	font-family: Snell Roundhand, cursive;
 }
 
+body > main > nav > ul {
+	display: grid;
+	width: 18%;
+	height: 40%;
+	margin: 0;
+  	padding: 0;
+	list-style-type: none;
+  	overflow: hidden;
+  	position:fixed;
+  	left:0;
+  	background-color: #ded9c8 ;
+  	
+}
+
+body > main > nav > ul > li {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+body > main > nav > ul > li > a {
+	text-decoration: none;
+}
 
  
