--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body{
 	overflow-x: hidden;
 	margin-left: 20%;
 	margin-right: 20%;
+	background-color:#f9f9f9;
 }
 
 body > header > nav > ul{
@@ -58,15 +59,15 @@ body > header > h1 {
 body > main > nav > ul {
 	display: grid;
 	width: 18%;
-	height: 40%;
 	margin: 0;
   	padding: 0;
 	list-style-type: none;
   	overflow: hidden;
   	position:fixed;
   	left:0;
-  	background-color: #ded9c8 ;
-  	
+  	background-color: #18950c;
+	border-radius: 0 20% 20% 0;
+	margin-top:5%;
 }
 
 body > main > nav > ul > li {
@@ -75,7 +76,18 @@ body > main > nav > ul > li {
 }
 
 body > main > nav > ul > li > a {
-	text-decoration: none;
+	color:white;
 }
 
- 
+body > main > nav > ul > li > a:hover {
+		color:aqua;
+}
+
+.h3 {
+	text-indent:15%;
+}
+
+.ancre {
+	padding-top:10%;
+	margin-top:-10%;
+}
