--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@ body{
 	background-image:url('images/fond.png');
 	background-size: contain; 
 	overflow-x: hidden;
-	background-color:#f9f9f9;
+	background-color:#ecf5ed;
+	font-family:cursive;
 }
 
 body > main {
@@ -20,7 +21,7 @@ body > header > nav > ul{
   	top:0;
   	position:fixed;
   	left:0;
-  	background-color: #18950c ;
+  	background-color: #5a9d2d ;
   	
 }
 
@@ -50,7 +51,7 @@ body > header > nav > ul > li > a{
 body > header > nav > ul > li > a:hover{
 	width:130px;
 	height: 50px;	
-	background-color : #966b30;
+	background-color : #003100;
 	}
  
 body > header > h1 {
@@ -67,7 +68,7 @@ body > main > nav > ul {
   	overflow: hidden;
   	position:fixed;
   	left:0;
-  	background-color: #18950c;
+  	background-color: #5a9d2d;
 	border-radius: 0 20% 20% 0;
 	margin-top:5%;
 }
@@ -82,7 +83,7 @@ body > main > nav > ul > li > a {
 }
 
 body > main > nav > ul > li > a:hover {
-	color:aqua;
+	color:#003100;
 }
 
 .h3 {
@@ -96,9 +97,9 @@ body > main > nav > ul > li > a:hover {
 
 p{
 	display:block;
-	background-color:rgb(131, 117, 17);
+	background-color:rgb(174, 197, 170);
 	border-radius:15px;
-	box-shadow: 12x 12px 12px 1px black;
+	box-shadow:10px 5px 5px black;
 	text-align: center;
 	font-family:cursive;
 	color : white;
@@ -114,7 +115,55 @@ p{
 footer{
 	width:100%;
 	height: 100px;
-	background-color:grey;
+	background-color:rgb(0, 0, 0, 0.1);
 	margin-left:0;
-	text-align:center;
+	text-align: center;
+	
 }
+
+footer > span {
+	padding-top: 10px;
+}
+.suppression{
+	list-style:none;
+}
+
+body > main > section > article > nav > ul > li > h4 > a {
+	text-decoration:none;
+}
+
+table {
+  width: 100%; 
+  border-collapse: collapse;
+  margin: 20px 0; 
+}
+
+th {
+  background-color: #4CAF50; 
+  color: white; 
+  padding: 12px; 
+  text-align: left;
+}
+
+td {
+  padding: 8px; 
+  border: 1px solid #ddd; 
+  text-align: left; 
+}
+
+h2{
+	background-color: #5a9d2d;
+	border-radius:5px 10px;
+	width: 20%;
+	margin:10px;
+	padding:5px;
+	text-align:center;
+	color: white;
+	height:10%;
+	
+}
+
+h3{
+	color:#8ab446;
+}
+
