--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body > header > nav > ul > li > a:hover{
  
 body > header > h1 {
 	margin-top:75px;
-	font-family: Snell Roundhand, cursive;
+	font-family: "Snell Roundhand", cursive;
 	background-color:rgb(7, 42, 22,0.5);
 	color:white;
 }
@@ -144,6 +144,7 @@ table {
   border-collapse: collapse;
   margin: 20px 0; 
   background-color:#ecf5ed;
+}
 
 th {
   background-color: #4CAF50; 
@@ -159,7 +160,7 @@ td {
 }
 
 h2{
-	backgroud-size:100%;
+	background-size: 100%;
 	background-color: #5a9d2d;
 	border-radius:5px 10px;
 	width: 20%;
@@ -175,6 +176,6 @@ h3{
 }
 
 body > main > section > h2{
-	padding-top:none;
+	padding-top:0;
 }
 
